[package]
name = "fork_union"
description = "Low-latency OpenMP-style NUMA-aware cross-platform fine-grained parallelism library"
version = "2.2.5"
edition = "2021"
authors = ["Ash Vardanian"]
license = "Apache-2.0"
repository = "https://github.com/ashvardanian/fork_union"

[lib]
name = "fork_union"
path = "rust/lib.rs"

[build-dependencies]
cc = "1.2.29"

[features]
default = ["std"]
std = []
numa = []

[profile.release]
opt-level = 2     # Corresponds to -O2
lto = true        # Enables Link Time Optimization for further optimizations
codegen-units = 1 # May increase compilation time but optimizes further
rpath = false     # On some systems, setting this to false can help with optimizations

[[example]]
name = "nbody"
path = "scripts/nbody.rs"
test = false
bench = false

[[example]]
name = "search"
path = "scripts/search.rs"
test = false
bench = false

[dev-dependencies]
rayon = "1.10"
rand = "0.9"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "sync"] }
simsimd = "6.5.0"
